[package]
name = "use-sqlx"
version = "0.1.0"
authors = ["Donovan Preston <donovanpreston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", features = ["mysql"] }
async-std = "1.6.5"
futures = "0.3"

